--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ANYKERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource
+ANYKERNEL_SOURCE=https://github.com/zclkkk/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=blioba-r-oss
 KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource/tree/biloba-r-oss
-KERNEL_SOURCE_BRANCH=Redmi Note 8 Android R
+KERNEL_SOURCE_BRANCH=blioba-r-oss
 KERNEL_TARGET=biloba
 BUILD_ARGS:CC=clang LD=ld.lld
