--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/zclkkk/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource/tree/biloba-r-oss
+KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource
 KERNEL_SOURCE_BRANCH=blioba-r-oss
-KERNEL_TARGET=biloba
+KERNEL_TARGET=k85v1_64
 BUILD_ARGS:CC=clang LD=ld.lld
