--- a/config.env
+++ b/config.env
@@ -2,5 +2,5 @@ ANYKERNEL_SOURCE=https://github.com/zclkkk/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/MiCode/Xiaomi_Kernel_OpenSource
 KERNEL_SOURCE_BRANCH=blioba-r-oss
-KERNEL_TARGET=k85v1_64
+KERNEL_TARGET=k85v1
 BUILD_ARGS:CC=clang LD=ld.lld
