--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/zclkkk/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/xiaomi-sm6125-devs/android_kernel_xiaomi_sm6125
-KERNEL_SOURCE_BRANCH=lineage-18.1/arch
+KERNEL_SOURCE_BRANCH=lineage-18.1
 KERNEL_TARGET=vendor/ginkgo-perf
 BUILD_ARGS:CC=clang LD=ld.lld
