--- a/config.env
+++ b/config.env
@@ -3,4 +3,4 @@ ANYKERNEL_SOURCE_BRANCH=master
 KERNEL_SOURCE=https://github.com/xiaomi-sm6125-devs/android_kernel_xiaomi_sm6125
 KERNEL_SOURCE_BRANCH=lineage-18.1
 KERNEL_TARGET=vendor/ginkgo-perf
-BUILD_ARGS:CC=clang LD=ld.lld
+BUILD_ARGS:CC=clang
