--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ANYKERNEL_SOURCE=https://github.com/zclkkk/AnyKernel3
 ANYKERNEL_SOURCE_BRANCH=master
-KERNEL_SOURCE=https://github.com/xiaomi-sm6125-devs/android_kernel_xiaomi_sm6125
-KERNEL_SOURCE_BRANCH=lineage-18.1
+KERNEL_SOURCE=https://github.com/PixelExperience-Devices/kernel_xiaomi_ginkgo/blob/thirteen/arch/arm64/configs/ginkgo-stock_defconfig
+KERNEL_SOURCE_BRANCH=thirteen
 KERNEL_TARGET=cuttlefish
 BUILD_ARGS:CC=clang
